refactor with redis and token management
